fix-lab2: rename phone_number to phone and date_of_birth to DOB to match column names

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div>
-    <%= form.label :date_of_birth, style: "display: block" %>
-    <%= form.date_field :date_of_birth %>
+    <%= form.label :DOB, style: "display: block" %>
+    <%= form.date_field :DOB %>
   </div>
 
   <div>
@@ -27,8 +27,8 @@
   </div>
 
   <div>
-    <%= form.label :phone_number, style: "display: block" %>
-    <%= form.text_field :phone_number %>
+    <%= form.label :phone, style: "display: block" %>
+    <%= form.text_field :phone %>
   </div>
 
   <div>
