--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -6,7 +6,7 @@
 
   <p>
     <strong>Date of birth:</strong>
-    <%= user.date_of_birth %>
+    <%= user.DOB %>
   </p>
 
   <p>
@@ -16,7 +16,7 @@
 
   <p>
     <strong>Phone number:</strong>
-    <%= user.phone_number %>
+    <%= user.phone %>
   </p>
 
 </div>
