--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div>
-    <%= form.label :date_of_birth, style: "display: block" %>
-    <%= form.date_field :date_of_birth %>
+    <%= form.label :DOB, style: "display: block" %>
+    <%= form.date_field :DOB %>
   </div>
 
   <div>
