--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div>
     <%= form.label :date_of_birth, style: "display: block" %>
-    <%= form.date_field :date_of_birth %>
+    <%= form.date_field :DOB %>
   </div>
 
   <div>
