--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,13 @@
 <% content_for :title, "New user" %>
 
-<h1>New user</h1>
+<div class="user-form-container">
+  <h1>New user</h1>
 
-<%= render "form", user: @user %>
+  <div class="user-form">
+    <%= render "form", user: @user %>
+  </div>
 
-<br>
-
-<div>
-  <%= link_to "Back to users", users_path %>
+  <div>
+    <%= link_to "Back to users", users_path, class: "back-link" %>
+  </div>
 </div>
